re PR c++/28349 (ICE with "undefined" va_arg and references)

2006-08-29  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/28349
        * testsuite/g++.dg/warn/var-args1.C: New test.
2006-08-29  Andrew Pinski  <pinskia@physics.uc.edu>

        PR C++/28349
        * call.c (build_x_va_arg): Remove the reference type
        from the type before creating the pointer type.

From-SVN: r116577